# cnes-project-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  helper.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  docker-push.yml
data_processing/: exploring.ipynb
exploration/: 01_cnes_sanity_checks.ipynb  03_cnes_transformations.ipynb  analise_exploratoria.ipynb  creating_gold_tables.ipynb  creating_metrics_sp.ipynb  exploring.ipynb  exploring_gold.ipynb  exploring_model.ipynb  exploring_model_options.ipynb  singleton copy.ipynb  singleton.ipynb
exploration/entregas/: analise_exploratoria_final.ipynb  linear_regression_abaixo_100k_v1 copy.ipynb  linear_regression_abaixo_20k_v1.ipynb  linear_regression_acima_100k_v1.ipynb  linear_regression_acima_20k_v1.ipynb  linear_regression_acima_50k_v1.ipynb  pipeline.joblib
extract/: extract.py  extractor.py
src/cnes_etl/: cli.py  config.py  logging.py
src/cnes_etl/common/: http.py  paths.py  storage.py  utils.py
src/cnes_etl/jobs/: base.py  extract.py  gold.py  transform.py
src/main/: cli.py
src/main/cli/: run_extract.py  run_tables.py
src/main/cnes_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/main/core/: storage.py
src/main/data_domains/: registry.py
src/main/extract/: extract.py  extractor.py
src/main/tables/: __init__.py  base.py  cnes_estabelecimentos.py  cnes_estabelecimentos_metricas.py  cnes_servicos.py
src/main/transform/: transform.py  transformer.py  transformer_old.py
src/test/extract/: test_extractor.py
(+16 files in other folders)
